--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,10 +3,10 @@ name: Deploy vue.js site to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["vue-dev"]
+    branches: ["main"]
   pull_request:
       branches:
-        - vue-dev
+        - main
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
